swagger for avatar
